@@ -1,11 +1,10 @@
-TO DO: Continued development of the 2.x version
+// $Id$
 
-Allow custom content boxes
+TO DO: [Continued development of the 2.x version]
+================================================
+
 Admin option to flush user settings per page
-Region width overrides
-Improved user config UI
 Message if user is not logged in
 Improved caching
 Clean up code
 Update help doc
-Update translations
